add the user based qr code generatre