@@ -1,5 +1,6 @@
 package com.wbsamb.userscanner.security;
 
+import java.util.Arrays;
 import java.util.List;
 
 import org.springframework.beans.factory.annotation.Autowired;
@@ -17,7 +18,6 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import com.wbsamb.userscanner.config.jwt.JwtAuthenticationEntryPoint;
@@ -28,6 +28,8 @@ import com.wbsamb.userscanner.config.jwt.JwtAuthorizationFilter;
 public class SecurityConfig {
     private static final String[] WHITE_LIST_URL = {
             "api/auth/**",
+            "/v2/api-docs",
+            "/v3/api-docs",
             "/v3/api-docs/**",
             "/swagger-resources",
             "/swagger-resources/**",
@@ -36,7 +38,8 @@ public class SecurityConfig {
             "/swagger-ui/**",
             "/swagger-ui.html",
             "/api/addUser",
-            "/api/**"
+            "/uploadfile/**",
+
     };
 
     @Autowired
@@ -71,33 +74,78 @@ public class SecurityConfig {
     protected void configure(AuthenticationManagerBuilder auth) throws Exception {
         auth.userDetailsService(userDetailsService).passwordEncoder(passwordEncoder());
     }
-@Bean
-    CorsConfigurationSource corsConfigurationSource() {
+
+    @Bean
+    public CorsConfiguration corsConfiguration() {
         CorsConfiguration corsConfig = new CorsConfiguration();
-        corsConfig.setAllowedOrigins(List.of("http://localhost:4200", "http://localhost:8080"));
-        corsConfig.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
+        corsConfig.setAllowedOrigins(List.of(
+                "http://192.168.13.72:4200",
+                "http://localhost:4200", // Optional: Add localhost for testing
+                "http://localhost:8080"));
+        corsConfig.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         corsConfig.setAllowedHeaders(List.of("*"));
         corsConfig.setAllowCredentials(true);
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", corsConfig);
-        return source;
+        return corsConfig;
     }
 
     @Bean
+    public UrlBasedCorsConfigurationSource corsConfigurationSource() {
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", corsConfiguration());
+        return source;
+    }
+
+    // @Bean
+    // SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+    //     http
+    //             .csrf(csrf -> csrf.disable())
+    //             .cors(cors -> cors.disable()) // use a bean method
+    //             .headers(headers -> headers
+    //                     .contentSecurityPolicy(csp -> csp.policyDirectives(
+    //                             "frame-ancestors 'self' http://localhost:4200 http://localhost:8080;"))
+    //                     .frameOptions(frame -> frame.sameOrigin()))
+    //             .authorizeHttpRequests(auth -> auth
+    //                     .requestMatchers(WHITE_LIST_URL).permitAll()
+    //                     .requestMatchers("/api/manage/plan/**").authenticated() // explicitly secured
+    //                     .anyRequest().authenticated())
+    //             .exceptionHandling(ex -> ex.authenticationEntryPoint(point))
+    //             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+    //             .logout(logout -> logout
+    //                     .logoutUrl("/auth/logout")
+    //                     .logoutSuccessHandler(jwtLogoutSuccessHandler));
+
+    //     http.addFilterBefore(jwtAuthorizationFilter, UsernamePasswordAuthenticationFilter.class);
+
+    //     return http.build();
+    // }
+
+        @Bean
     SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        http
-                .csrf(csrf -> csrf.disable())
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // use a bean method
-                .headers(headers -> headers
-                        .contentSecurityPolicy(csp -> csp.policyDirectives(
-                                "frame-ancestors 'self' http://localhost:4200 http://localhost:8080;"))
-                        .frameOptions(frame -> frame.sameOrigin()))
-                .authorizeHttpRequests(auth -> auth
+        http.csrf(csrf -> csrf.disable())
+                .cors(cors -> cors
+                        .configurationSource(request -> {
+                            CorsConfiguration corsConfig = new CorsConfiguration();
+                            corsConfig.setAllowedOrigins(List.of("http://localhost:4200", "http://localhost:8080"));
+                            corsConfig.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
+                            corsConfig.setAllowedHeaders(List.of("*"));
+                            corsConfig.setAllowCredentials(true);
+                            return corsConfig;
+                        }))
+                .headers(header -> {
+                    header
+                            .contentSecurityPolicy(policy -> {
+                                policy.policyDirectives(
+                                        "frame-ancestors 'self' http://localhost:4200 http://localhost:8080;");
+                            })
+                            .frameOptions(frame -> frame.sameOrigin());
+                })
+                .authorizeHttpRequests(authz -> authz
                         .requestMatchers(WHITE_LIST_URL).permitAll()
-                        .requestMatchers("/api/manage/plan/**").authenticated() // explicitly secured
                         .anyRequest().authenticated())
-                .exceptionHandling(ex -> ex.authenticationEntryPoint(point))
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .exceptionHandling(ex -> ex
+                        .authenticationEntryPoint(point))
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .logout(logout -> logout
                         .logoutUrl("/auth/logout")
                         .logoutSuccessHandler(jwtLogoutSuccessHandler));
